# Lumen

./: .gitignore  Cargo.toml  DEMO.md  FILE_JUMP_DEMO.md  LICENSE  PHASE0.md  PHASE1_PLAN.md  PHASE2_PLAN.md  PHASE3_PLAN.md  PHASE4_PLAN.md  Project.MD  QUICK_TEST.md  README.md  TEST_IMAGES.md  install-local.sh  test_list_render.rs  test_nested_bug.md  test_nested_debug.md  test_nested_list.md  test_nested_lists.md  test_simple.md  test_table_borders.md  test_toc_links.md
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
benches/: layout.rs  parsing.rs  search.rs
examples/: debug_events.rs  debug_parse.rs  debug_table.rs  layout.rs  markdown_demo.md  mermaid_demo.md  test_parse_multiple.rs  test_parser_nested_links.rs  test_parser_strong_label.rs  test_parser_with_debug.rs  themes.rs
src/: file_manager.rs  lib.rs  main.rs  mermaid.rs  preferences.rs  search.rs
src/ir/: mod.rs
src/layout/: engine.rs  mod.rs  text.rs  types.rs
src/parser/: markdown.rs  mod.rs  tests.rs
src/render/: mod.rs
src/theme/: color.rs  defaults.rs  mod.rs  types.rs  vim_import.rs
tests/: file_management_tests.rs  integration_tests.rs  layout_edge_cases.rs  search_tests.rs  theme_tests.rs
tests/fixtures/: basic.md  blockquotes.md  code.md  complex.md  links_images.md  lists.md  tables.md
themes/: docs.yaml  minimal.yaml  neon.yaml
