[package]
name = "lumen"
version = "0.1.0"
edition = "2021"
authors = ["Lumen Contributors"]
description = "A browser-like Markdown document renderer for modern terminals"
license = "MIT OR Apache-2.0"

[dependencies]
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
pulldown-cmark-to-cmark = "18.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4"
