[package]
name = "lumen"
version = "0.1.0"
edition = "2021"
authors = ["Lumen Contributors"]
description = "A browser-like Markdown document renderer for modern terminals"
license = "MIT OR Apache-2.0"

[dependencies]
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
pulldown-cmark-to-cmark = "18.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
ratatui = "0.29"
crossterm = "0.28"
base64 = "0.22"
dirs = "5.0"  # For user home directory access
# Image rendering in sidebar - no escape sequence artifacts!
# Using version 8.x which is compatible with our setup
ratatui-image = { version = "8", default-features = false, features = ["crossterm", "serde"] }
image = "0.25"  # For loading image files

[dev-dependencies]
pretty_assertions = "1.4"
criterion = "0.5"

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "layout"
harness = false

[[bench]]
name = "search"
harness = false
